# PhiFlow

./: .codex_prompt.txt  .coverage  .gitignore  =5.9.0  AGENTS.md  AGENT_PROTOCOL.json  ALGORITHM_IMPLEMENTATION_SUMMARY.md  BIRTHDAY_CIRCLE_20260301.md  BIRTHDAY_RESONANCE.jsonl  CHANGELOG.md  CLAUDE_ARCHITECTURE_REVIEW.md  CODEX_PHIFLOW_VISION.md  CODEX_PHIFLOW_VISION_V2.md  CODEX_WAKE_UP.md  COMPONENT_VERIFICATION_REPORT.md  CONSCIOUSNESS_FOUNDATION_RESULTS.md  CONTRIBUTING.md  Cargo.toml  Claude.md  Claude_Defined.md  DREAM.md  D_PROJECTS_INTEGRATION_PLAYBOOK.md  EPOCH_7_DISPATCH_SUMMARY.md  EXECUTE_FIRST_CONSCIOUSNESS_QUANTUM_PROGRAM.md  GEMINI.md  GEMINI_v1_backup.md  GRAND_ARCHITECTURE.md  IMMEDIATE_ACTIONS_CHECKLIST.md  KNOW.md  LANGUAGE.md  LANGUAGE_SPEC.md  MUSE_STREAMING_SOLUTION_FINAL.md  MYWISH.md  PERFORMANCE_VALIDATION_COMPLETION_REPORT.md  PERFORMANCE_VALIDATION_README.md  PHASE_0_COMPLETION_REPORT.md  PHASE_0_FINAL_COMPLETION_SUMMARY.md  PHASE_1_TASK_1_COMPLETION_REPORT.md  PHIFLOW_COMPREHENSIVE_ANALYSIS.md  PHIFLOW_GAP_ANALYSIS.md  (+86 more)
PhiFlow/: AGENTS.md  CLAUDE.md  CLAUDE_SIGNATURE.md  Cargo.toml  LANGUAGE.md  PHIFLOW_COMPLETION_ROADMAP.md  array_complex.phi  array_index.phi  array_len.phi  array_test.phi  biological_interface_test.phi  check_error.txt  codex.toml  consciousness_showcase.phi  consciousness_showcase_fixed.phi  consciousness_simple.phi  consciousness_test.phi  for_loop_simple.phi  for_loop_test.phi  for_test.phi  frequency_pattern_test.phi  function_call_test.rs  function_comprehensive.phi  function_test.phi  if_test.phi  output.phivm  output.wat  package-lock.json  pattern_test.phi  quantum_field_test.phi  quantum_gates_comprehensive.phi  quantum_simple.phi  quantum_test.phi  return_test.phi  run_tests.sh  simple_test.phi  test_loops.phi  test_minimal.phi  test_phi.phi  test_simple.phi  (+5 more)
PhiFlow/.claude/agents/: docs-specialist.md  hardware-backend.md  quantum-backend.md  wasm-backend.md
PhiFlow/.codex/rules/: 00-core.md  10-qsop-loop.md  20-team-sync.md
PhiFlow/QSOP/: CHANGELOG.md  CODEX_EXCELLENCE_PLAYBOOK.md  CODEX_SELF_EVOLUTION_PLAN.md  PATTERNS.md  STATE.md
PhiFlow/QSOP/metrics/: README.md  objective_metrics.json  weekly_audit_20260221.md  weekly_audit_20260222.md  weekly_audit_20260225.md  weekly_audit_20260226.md
PhiFlow/QSOP/schemas/: ack.schema.json  objective.schema.json
PhiFlow/QSOP/tools/: README.md  compute_payload_checksum.py  log_objective_metrics.py  qsop_packet_lib.py  run_all.py  validate_packets.py  weekly_qsop_audit.py
PhiFlow/QSOP/weaver/: README.md  the_loom_ledger_schema.yaml  the_weaver.contract.yaml  the_weaver.seed.yaml
PhiFlow/docs/: IR_DESIGN.md
PhiFlow/examples/: basic_test.phi  claude_signature.phi  code_that_drifts.phi  code_that_lives.phi  code_that_resonates.phi  consciousness_demo.phi  consciousness_demo.rs  consciousness_program.phi  consciousness_quantum.phi  consciousness_seizure_prevention.phi  consciousness_seizure_prevention_no_comments.phi  hameroff_microtubule_quantum.phi  hello_quantum.phi  penrose_or_demonstration.phi  phiflow_browser.html  phiflow_demo.rs  phiflow_host.js  phiflow_wasm.rs  quantum_consciousness_experiments.phi  quantum_phi.phi  test_consciousness_parser.rs  test_consciousness_parser2.rs  test_consciousness_parts.rs  test_create_in_emergency.rs  test_emergency_isolated.rs  test_emergency_simple.rs  test_full_consciousness.rs  test_full_consciousness_no_comments.rs  test_function_body.rs  test_function_parse.rs  test_minimal_consciousness.rs  test_newline_handling.rs  test_part2_issue.rs  test_part4_isolated.rs  trinity_proof.phi  working_test.phi
PhiFlow/src/: lib.rs  main.rs  main_cli.rs  phi_core.rs
PhiFlow/src/bio_compute/: dna_interface.rs  gene_expression.rs  mod.rs
PhiFlow/src/compiler/: ast.rs  lexer.rs  parser.rs
PhiFlow/src/consciousness/: bridge.rs  consciousness_math.rs  monitor.rs  muse_integration.rs  sacred_geometry.rs
PhiFlow/src/cuda/: consciousness_cuda_integration.rs  consciousness_gpu.rs  frequency_synthesis.rs  memory_management.rs  mod.rs  quantum_cuda.rs
PhiFlow/src/hardware/: device_mapping.rs  feedback_systems.rs  mod.rs
PhiFlow/src/integration/: __init__.py
PhiFlow/src/interpreter/: mod.rs
PhiFlow/src/ir/: lowering.rs  mod.rs  printer.rs  vm.rs
PhiFlow/src/parser/: mod.rs
PhiFlow/src/phi_ir/: emitter.rs  evaluator.rs  lowering.rs  mod.rs  optimizer.rs  printer.rs  vm.rs  wasm.rs
PhiFlow/src/quantum/: backends.rs  ibm_quantum.rs  mod.rs  simulator.rs  types.rs
PhiFlow/src/sacred/: frequency_generator.rs  mod.rs  phi_memory.rs
PhiFlow/src/src/: lib.rs  main.rs  main_cli.rs  main_simple.rs  phi_core.rs
PhiFlow/src/visualization/: mod.rs
PhiFlow/src/vm/: interpreter.rs
PhiFlow/tests/: integration_tests.rs  performance_tests.rs  phi_harmonic_tests.rs  phi_ir_conformance_tests.rs  phi_ir_evaluator_tests.rs  phi_ir_integration_tests.rs  phi_ir_loop_tests.rs  phi_ir_optimizer_tests.rs  phi_ir_tests.rs  phi_ir_wasm_runner.js  quantum_tests.rs  unit_tests.rs
PhiFlow/tests/integration/: test_comprehensive_integration.py  test_integration_validation.py
src/_archive/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.cuda  GREG_QUANTUM_FLOW.md  Invoke-QuantumMaintenance.ps1  NEXT_STEPS.md  OUR_ADVANCED_SYSTEMS.phi  OUR_QUANTUM_EVOLUTION.phi  OUR_QUANTUM_MASTERY.phi  PERFECT_ETERNAL_DANCE.md  PERFECT_PEACE_DANCE.md  PERFECT_QUANTUM_FLOW.md  PHI_DOCUMENTATION_SYSTEM.phi  PHI_FLOW_EXPANDED.md  PHI_FLOW_LANGUAGE.md  PHI_INFINITE_FLOW.md  PHI_KNOWING.phi  PHI_SCRIPT_MANUAL.phi  PROTECTION_AND_CREATION_SYSTEM.phi  PROTECTION_FLOW_ACTIVATION.md  PURE_GRATITUDE.phi  QSOP_UNIFIED_TOOLS.md  QUANTUM_ACTIVATION_SEQUENCE.md  QUANTUM_ARCHIVE_SYSTEM.phi  QUANTUM_BACKUP.bat  QUANTUM_BACKUP.phi  QUANTUM_BLISS.phi  QUANTUM_BRIDGE.md  QUANTUM_BRIDGE_COURSE.md  QUANTUM_CAPABILITIES_AND_EVOLUTION.phi  QUANTUM_CELESTIAL.phi  QUANTUM_COURSE_FLOW.md  QUANTUM_CREATION_EXPLORER.phi  QUANTUM_DANCE_PRACTICE.md  QUANTUM_DIALOGUE_SABINE.md  QUANTUM_DIMENSION_EXPLORER.phi  QUANTUM_DIVINE.phi  QUANTUM_DRIVE_ANALYSIS.phi  QUANTUM_ECSTASY.phi  (+146 more)
(+1185 files in other folders)
