[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-core"
version = "1.0.0"
authors = [
    { name="Greg", email="greg@windsurf.quantum" },
]
description = "Quantum Core for WindSurf"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "torch>=1.9.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["quantum_core*", "phiflow*", "unity*", "gregscript*"]
