[package]
name = "quantum-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
num-complex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ndarray = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
rustfft = "6.2"
ringbuf = "0.4"
rodio = "0.18"
minimp3 = "0.5"
