[package]
name = "quantum-cuda"
version = "0.1.0"
edition = "2021"

[dependencies]
rustacuda = "0.1.3"
rustacuda_core = "0.1.2"
rustacuda_derive = "0.1.2"
num-complex = "0.4.3"
ndarray = { version = "0.15.6", features = ["rayon"] }
rayon = "1.7"
thiserror = "1.0"
log = "0.4"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3"
