[package]
name = "quantum-timeline"
version = "0.1.0"
edition = "2021"

[dependencies]
num-complex = { workspace = true }
ndarray = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
quantum-dimension = { workspace = true }
quantum-sacred = { workspace = true }
quantum-reality = { workspace = true }
